--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -23,4 +23,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPersonBP",NewGameName="/Script/Ballena")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPersonBP",NewGameName="/Script/Ballena")
+bSmoothFrameRate=True
+bUseFixedFrameRate=True
+FixedFrameRate=60.000000
 
