--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,13 +2,13 @@
 GameName=Ballena
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Balllena/Maps/Nivel1.Nivel1
-GameDefaultMap=/Game/ThirdPersonBP/Maps/Nivel1.Nivel1
+EditorStartupMap=/Game/Balllena/Maps/MenuPrincipal.MenuPrincipal
+GameDefaultMap=/Game/Balllena/Maps/MenuPrincipal.MenuPrincipal
 TransitionMap=
-bUseSplitscreen=True
+bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode_C
+GlobalDefaultGameMode=/Game/Balllena/Nivel2/ThirdPersonGameMode.ThirdPersonGameMode_C
 GlobalDefaultServerGameMode=None
 GameInstanceClass=/Game/Balllena/Nivel2/VidasPersonaje.VidasPersonaje_C
 
@@ -27,4 +27,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 bSmoothFrameRate=True
 bUseFixedFrameRate=True
 FixedFrameRate=60.000000
+
+[/Script/UnrealEd.CookerSettings]
+bCookOnTheFlyForLaunchOn=True
 
