--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,26 +1,26 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=0EA94ED44C7BDF0FAC4FF5A27DA1B42D
-ProjectName=Third Person BP Game Template
+ProjectName=Ballena
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 
 [/Script/UnrealEd.ProjectPackagingSettings]
-Build=Never
+Build=Always
 BuildConfiguration=PPBC_Shipping
 BuildTarget=
 StagingDirectory=(Path="")
-FullRebuild=False
+FullRebuild=True
 ForDistribution=True
-IncludeDebugFiles=False
+IncludeDebugFiles=True
 BlueprintNativizationMethod=Disabled
 bIncludeNativizedAssetsInProjectGeneration=False
 bExcludeMonolithicEngineHeadersInNativizedCode=False
 UsePakFile=True
 bUseIoStore=False
 bMakeBinaryConfig=False
-bGenerateChunks=False
+bGenerateChunks=True
 bGenerateNoChunks=False
 bChunkHardReferencesOnly=False
 bForceOneChunkPerFile=False
@@ -36,7 +36,7 @@ PakFileCompressionLevel_DebugDevelopment=3
 PakFileCompressionLevel_TestShipping=5
 PakFileCompressionLevel_Distribution=7
 HttpChunkInstallDataVersion=
-IncludePrerequisites=True
+IncludePrerequisites=False
 IncludeAppLocalPrerequisites=False
 bShareMaterialShaderCode=True
 bDeterministicShaderCodeOrder=False
