no se hacer el ejecutable, espero puedan resolverlo los quiero me ire a dormir

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,13 +2,13 @@
 GameName=Ballena
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Balllena/Maps/MenuPrincipal.MenuPrincipal
+EditorStartupMap=/Game/Balllena/Maps/Nivel2.Nivel2
 GameDefaultMap=/Game/Balllena/Maps/MenuPrincipal.MenuPrincipal
 TransitionMap=
 bUseSplitscreen=False
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/Balllena/Nivel2/ThirdPersonGameMode.ThirdPersonGameMode_C
+GlobalDefaultGameMode=/Game/Blueprints/Mainmenu.Mainmenu_C
 GlobalDefaultServerGameMode=None
 GameInstanceClass=/Game/Balllena/Nivel2/VidasPersonaje.VidasPersonaje_C
 
@@ -30,4 +30,5 @@ FixedFrameRate=60.000000
 
 [/Script/UnrealEd.CookerSettings]
 bCookOnTheFlyForLaunchOn=True
+bEnableCookOnTheSide=False
 
