--- a/Ballena.uproject
+++ b/Ballena.uproject
@@ -2,12 +2,5 @@
 	"FileVersion": 3,
 	"EngineAssociation": "4.27",
 	"Category": "",
-	"Description": "",
-	"TargetPlatforms": [
-		"AllDesktop",
-		"WindowsNoEditor",
-		"HoloLens",
-		"LinuxNoEditor",
-		"Android"
-	]
+	"Description": ""
 }
