--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -17,10 +17,10 @@ IncludeDebugFiles=True
 BlueprintNativizationMethod=Disabled
 bIncludeNativizedAssetsInProjectGeneration=False
 bExcludeMonolithicEngineHeadersInNativizedCode=False
-UsePakFile=True
+UsePakFile=False
 bUseIoStore=False
 bMakeBinaryConfig=False
-bGenerateChunks=True
+bGenerateChunks=False
 bGenerateNoChunks=False
 bChunkHardReferencesOnly=False
 bForceOneChunkPerFile=False
@@ -49,7 +49,7 @@ InternationalizationPreset=English
 LocalizationTargetCatchAllChunkId=0
 bCookAll=False
 bCookMapsOnly=True
-bSkipEditorContent=False
+bSkipEditorContent=True
 bSkipMovies=False
 -IniKeyBlacklist=KeyStorePassword
 -IniKeyBlacklist=KeyPassword
