--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=Ballena
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Balllena/Maps/Nivel2.Nivel2
+EditorStartupMap=/Game/Balllena/Maps/MenuPrincipal.MenuPrincipal
 GameDefaultMap=/Game/Balllena/Maps/MenuPrincipal.MenuPrincipal
 TransitionMap=
 bUseSplitscreen=False
